# scitos

./: .gitmodules  README.md
openniWrapper/: CMakeLists.txt  package.xml
openniWrapper/include/: ColorCallback.h  DepthCallback.h  OniSampleUtilities.h  OpenniWrapperNode.h  OpenniWrapperNodelet.h
openniWrapper/launch/: device.launch  processing.launch
openniWrapper/src/: ColorCallback.cpp  DepthCallback.cpp  OpenniWrapperNode.cpp  OpenniWrapperNodelet.cpp  main.cpp
openni_wrapper/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
openni_wrapper/include/: ColorCallback.h  DepthCallback.h  OpenniWrapperNode.h  OpenniWrapperNodelet.h
openni_wrapper/launch/: device.launch  kinect_frames.launch  main.launch  processing.launch
openni_wrapper/src/: ColorCallback.cpp  DepthCallback.cpp  OpenniWrapperNode.cpp
scitos_dashboard/src/scitos_dashboard/: scitos_dashboard.py  scitos_drive.py
scitos_robot/: CMakeLists.txt  package.xml
software/: mira-installer-binary.sh  mira-installer.sh
