<?xml version="1.0"?>
<package>
  <name>scitos_robot</name>
  <version>0.0.1</version>
  <description>
	This stack collects SCITOS-specific components that are used in bringing up a robot.
  </description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>

  <license>GPL</license>

  <url type="website">http://github.com/strands-project/scitos_robot</url>

  <author email="cburbridge@gmail.com">Chris Burbridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>scitos_bringup</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
